# onboard_cmp_code

./: .gitignore  readme(机载树莓派网络配置).txt  地图
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: k230_ros_bridge.pc  laser_pointer_driver.pc  target_aiming_system.pc  uav_gazebo_sim.pc  uav_slam_controller.pc
devel/lib/uav_slam_controller/: slam_controller_node
devel/share/k230_ros_bridge/cmake/: k230_ros_bridgeConfig.cmake
devel/share/laser_pointer_driver/cmake/: laser_pointer_driverConfig.cmake
devel/share/target_aiming_system/cmake/: target_aiming_systemConfig.cmake
devel/share/uav_gazebo_sim/cmake/: uav_gazebo_simConfig.cmake
devel/share/uav_slam_controller/cmake/: uav_slam_controllerConfig.cmake
documents/: main_package.md
src/fastlio_px4_waypoint/: CMakeLists.txt  package.xml
src/fastlio_px4_waypoint/config/: waypoint_params.yaml
src/fastlio_px4_waypoint/launch/: single_waypoint.launch
src/fastlio_px4_waypoint/src/: fastlio_px4_waypoint.cpp
src/odom_to_out/: CMakeLists.txt  package.xml
src/odom_to_out/config/: odom_to_out.yaml
src/odom_to_out/launch/: odom_to_out.launch
src/odom_to_out/src/: odom_to_out_node.cpp
src/odom_to_pose/: CMakeLists.txt  package.xml
src/odom_to_pose/config/: odom_to_pose.yaml
src/odom_to_pose/launch/: odom_to_pose.launch
src/odom_to_pose/src/: odom_to_pose_node.cpp
src/px4_waypoint_circle_test/: CMakeLists.txt  package.xml
src/px4_waypoint_circle_test/config/: params.yaml
src/px4_waypoint_circle_test/launch/: test.launch
src/px4_waypoint_circle_test/src/: px4_waypoint_circle_test.cpp
src/servo_controller/: CMakeLists.txt  package.xml
src/servo_controller/msg/: ServoCmd.msg
src/servo_controller/scripts/: servo_driver_node.py
src/target_aiming_system/: CMakeLists.txt
src/uav_camera_publisher/: CMakeLists.txt  package.xml
src/uav_camera_publisher/config/: camera_publisher.yaml
src/uav_camera_publisher/launch/: camera_publisher.launch
src/uav_camera_publisher/scripts/: camera_publisher_node.py
src/uav_gazebo_sim/: CMakeLists.txt  package.xml
src/uav_gazebo_sim/launch/: sim_circle_test_external_px4.launch  sim_fastlio_px4_waypoint_external_px4.launch  sim_mission.launch  sim_mission_external_px4.launch  sim_pure.launch
src/uav_gazebo_sim/urdf/: uav_simple.urdf.xacro
src/uav_gazebo_sim/worlds/: empty_ground.world
src/uav_main_controller/: CMakeLists.txt  README.md  package.xml
src/uav_main_controller/config/: mission.yaml
src/uav_main_controller/include/uav_main_controller/: mission_controller.h
src/uav_main_controller/launch/: mission.launch
src/uav_main_controller/src/: mission_controller_node.cpp
src/uav_slam_controller/: CMakeLists.txt  package.xml
src/uav_slam_controller/config/: controller_params.yaml
src/uav_slam_controller/include/uav_slam_controller/: slam_controller.h
src/uav_slam_controller/luanch/: slam_controller.launch
src/uav_slam_controller/src/: slam_controller_node.cpp
