<?xml version="1.0"?>
<package format="2">
  <name>uav_gazebo_sim</name>
  <version>0.0.1</version>
  <description>Minimal UAV simulation for flight control test</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
</package>