<?xml version="1.0"?>
<package format="2">
  <name>uav_slam_controller</name>
  <version>0.0.1</version>
  <description>UAV SLAM-based flight controller with ground station communication</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS核心依赖 -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- jsoncpp依赖：只留这一个通用depend，不要写build_depend或exec_depend -->
  <depend>jsoncpp</depend>
</package>